php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46099 Xsltprocessor::setProfiling - memory leak
Submitted: 2008-09-16 18:57 UTC Modified: 2008-09-18 11:50 UTC
From: felipe@php.net Assigned: rrichards (profile)
Status: Closed Package: XSLT related
PHP Version: 5.3CVS-2008-09-16 (CVS) OS:
Private report: No CVE-ID: None
 [2008-09-16 18:57 UTC] felipe@php.net
Description:
------------
See below.

The intern->profiling isn't freed and not checked when calling setProfiling() two or more times.

Reproduce code:
---------------
<?php

$x = new xsltprocessor();
$x->setProfiling('foo');
$x->setProfiling('foo');


Actual result:
--------------
Memory leak.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-09-16 18:59 UTC] felipe@php.net
A probable fix:
http://felipe.ath.cx/diff/bug46099.diff

 [2008-09-18 11:51 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 06:00:02 2026 UTC