fix bug #46099 (Xsltprocessor::setProfiling - memory leak)