ext/xsl/php_xsl.c
@@ -103,6 +103,9 @@ void xsl_objects_free_storage(void *object TSRMLS_DC)
 		xsltFreeStylesheet((xsltStylesheetPtr) intern->ptr);
 		intern->ptr = NULL;
 	}
+	if (intern->profiling) {
+		efree(intern->profiling);
+	}
 	efree(object);
 }
 /* }}} */
